--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - docker build -t yihao/docker-react -f Dockerfile.dev .
 
 script:
-  - npm run -e CI=true yihao/docker-react -f Dockerfile.dev .
+  - docker run -e CI=true yihao/docker-react -f Dockerfile.dev .
 
 language: generic
