--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: required
+language: generic
 services:
   - docker
 
@@ -8,4 +8,15 @@ before_install:
 script:
   - docker run -e CI=true yihao/docker-react npm run test
 
-language: generic
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
+  access_key_id: 
+    secure: "$AWS_ACCESS_KEY"
+  secret_access_id:
+    secure: "$AWS_SECRET_KEY"
+  on:
+    branch: master
