--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,7 @@ deploy:
   app: "docker-react"
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
-  access_key_id: 
-    secure: "$AWS_ACCESS_KEY"
+  access_key_id: $AWS_ACCESS_KEY
   secret_access_id:
     secure: "$AWS_SECRET_KEY"
   on:
