--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ deploy:
   bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
   access_key_id: $AWS_ACCESS_KEY
   secret_access_id:
-    secure: "$AWS_SECRET_KEY"
+    secure: $AWS_SECRET_KEY
   on:
     branch: master
