--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ deploy:
   env: "DockerReact-env"
   bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_id:
-    secure: $AWS_SECRET_KEY
+  secret_access_id: $AWS_SECRET_KEY
   on:
     branch: master
