--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ before_install:
 script:
   - docker run -e CI=true yihao/docker-react npm run test
 
-deploy:
-  provider: elasticbeanstalk
-  region: "ap-southeast-2"
-  app: "docker-react"
-  env: "DockerReact-env"
-  bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_id: $AWS_SECRET_KEY
-  on:
-    branch: master
+# deploy:
+#   provider: elasticbeanstalk
+#   region: "ap-southeast-2"
+#   app: "docker-react"
+#   env: "DockerReact-env"
+#   bucket_name: "elasticbeanstalk-ap-southeast-2-170566615202"
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key: $AWS_SECRET_KEY
+#   on:
+#     branch: master
